@@ -1,4 +1,4 @@
-function smopen(inst)
+fopefunction smopen(inst)
 % smopen(inst)
 % Opens smdata.inst(i).data.inst for all i in inst, if defined.
 % Default is to try to open all instruments.
@@ -11,8 +11,10 @@ end
 inst = sminstlookup(inst);
 
 for i = inst
-    if isfield(smdata.inst(i), 'data') && isfield(smdata.inst(i).data, 'inst') && strmatch('closed',smdata.inst(i).data.inst.Status)
-        fopen(smdata.inst(i).data.inst);
+    if isfield(smdata.inst(i), 'data') && isfield(smdata.inst(i).data, 'inst') 
+        if strmatch('closed',smdata.inst(i).data.inst.Status)
+            fopen(smdata.inst(i).data.inst);
+        end
     end
 end
     
